--- a/appversion.json
+++ b/appversion.json
@@ -1,7 +1,7 @@
-[
-  {
-    "currentVersion": "1.0.1",
-    "minimumVersion": "1.0.1",
-    "newVersion": "1.0.1"
-  }
-]
+{
+  "record": {
+      "currentVersion": "1.0.1",
+      "minimumVersion": "1.0.1",
+      "newVersion": "1.0.1"
+    }
+}
